Corrección de constraints

--- a/notebook/constraints.ipynb
+++ b/notebook/constraints.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,109 +41,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "props = {\n",
-    "    \"hecho_novedad\": {\n",
-    "        \"id_tipo_novedad\": {\n",
-    "            \"column\": \"key_tipo_novedad\",\n",
-    "            \"ref_table\": \"dim_tipo_novedad\",\n",
-    "            \"ref_column\": \"key_dim_tipo_novedad\"\n",
-    "        }\n",
+    "    \"hecho_novedad\" : {\n",
+    "        \"key_tipo_novedad\" : {\n",
+    "            \"column\" : \"key_tipo_novedad\",\n",
+    "            \"ref_table\" : \"dim_tipo_novedad\",\n",
+    "            \"ref_column\" : \"key_dim_tipo_novedad\"\n",
+    "        },\n",
     "    },\n",
-    "    \"hecho_entrega_mensajeria_diario\": {\n",
-    "        \"id_fecha\": {\n",
-    "            \"column\": \"key_fecha\",\n",
-    "            \"ref_table\": \"dim_fecha\",\n",
-    "            \"ref_column\": \"key_dim_fecha\"\n",
+    "    \"hecho_entrega_mensajeria_diario\" : {\n",
+    "        \"key_fecha\" : {\n",
+    "            \"column\" : \"key_fecha\",\n",
+    "            \"ref_table\" : \"dim_fecha\",\n",
+    "            \"ref_column\" : \"key_dim_fecha\"\n",
     "        },\n",
-    "        \"id_cliente\": {\n",
-    "            \"column\": \"key_cliente\",\n",
-    "            \"ref_table\": \"dim_cliente\",\n",
-    "            \"ref_column\": \"key_dim_cliente\"\n",
+    "        \"key_cliente\" : {\n",
+    "            \"column\" : \"key_cliente\",\n",
+    "            \"ref_table\" : \"dim_cliente\",\n",
+    "            \"ref_column\" : \"key_dim_cliente\"\n",
     "        },\n",
-    "        \"id_sede\": {\n",
-    "            \"column\": \"key_sede\",\n",
-    "            \"ref_table\": \"dim_sede\",\n",
-    "            \"ref_column\": \"key_dim_sede\"\n",
+    "        \"key_sede\" : {\n",
+    "            \"column\" : \"key_sede\",\n",
+    "            \"ref_table\" : \"dim_sede\",\n",
+    "            \"ref_column\" : \"key_dim_sede\"\n",
     "        },\n",
-    "        \"id_mensajero\": {\n",
-    "            \"column\": \"key_mensajero\",\n",
-    "            \"ref_table\": \"dim_mensajero\",\n",
-    "            \"ref_column\": \"key_dim_mensajero\"\n",
-    "        }\n",
     "    },\n",
-    "    \"hecho_entrega_mensajeria_hora\": {\n",
-    "        \"id_hora\": {\n",
-    "            \"column\": \"key_hora\",\n",
-    "            \"ref_table\": \"dim_hora\",\n",
-    "            \"ref_column\": \"key_dim_hora\"\n",
+    "    \"hecho_entrega_mensajeria_hora\" : {\n",
+    "        \"key_hora\" : {\n",
+    "            \"column\" : \"key_hora\",\n",
+    "            \"ref_table\" : \"dim_hora\",\n",
+    "            \"ref_column\" : \"key_dim_hora\"\n",
     "        },\n",
-    "        \"id_cliente\": {\n",
-    "            \"column\": \"key_cliente\",\n",
-    "            \"ref_table\": \"dim_cliente\",\n",
-    "            \"ref_column\": \"key_dim_cliente\"\n",
+    "        \"key_mensajero\" : {\n",
+    "            \"column\" : \"key_mensajero\",\n",
+    "            \"ref_table\" : \"dim_mensajero\",\n",
+    "            \"ref_column\" : \"key_dim_mensajero\"\n",
     "        },\n",
-    "        \"id_mensajero\": {\n",
-    "            \"column\": \"key_mensajero\",\n",
-    "            \"ref_table\": \"dim_mensajero\",\n",
-    "            \"ref_column\": \"key_dim_mensajero\"\n",
-    "        }\n",
     "    },\n",
-    "    \"hecho_entrega_mensajeria_acumulada\": {\n",
-    "        \"id_fecha_inicio\": {\n",
-    "            \"column\": \"fecha_inicio\",\n",
-    "            \"ref_table\": \"dim_fecha\",\n",
-    "            \"ref_column\": \"key_dim_fecha\"\n",
+    "    \"hecho_entrega_mensajeria_acumulada\" : {\n",
+    "        \"key_fecha_inicio\" : {\n",
+    "            \"column\" : \"key_fecha_inicio\",\n",
+    "            \"ref_table\" : \"dim_fecha\",\n",
+    "            \"ref_column\" : \"key_dim_fecha\"\n",
     "        },\n",
-    "        \"id_fecha_asignado\": {\n",
-    "            \"column\": \"fecha_asignado\",\n",
-    "            \"ref_table\": \"dim_fecha\",\n",
-    "            \"ref_column\": \"key_dim_fecha\"\n",
+    "        \"key_fecha_asignacion\" : {\n",
+    "            \"column\" : \"key_fecha_asignacion\",\n",
+    "            \"ref_table\" : \"dim_fecha\",\n",
+    "            \"ref_column\" : \"key_dim_fecha\"\n",
     "        },\n",
-    "        \"id_fecha_recogido\": {\n",
-    "            \"column\": \"fecha_recogido\",\n",
-    "            \"ref_table\": \"dim_fecha\",\n",
-    "            \"ref_column\": \"key_dim_fecha\"\n",
+    "        \"key_fecha_recogida\" : {\n",
+    "            \"column\" : \"key_fecha_recogida\",\n",
+    "            \"ref_table\" : \"dim_fecha\",\n",
+    "            \"ref_column\" : \"key_dim_fecha\"\n",
     "        },\n",
-    "        \"id_fecha_entregado\": {\n",
-    "            \"column\": \"fecha_entregado\",\n",
-    "            \"ref_table\": \"dim_fecha\",\n",
-    "            \"ref_column\": \"key_dim_fecha\"\n",
+    "        \"key_fecha_entrega\" : {\n",
+    "            \"column\" : \"key_fecha_entrega\",\n",
+    "            \"ref_table\" : \"dim_fecha\",\n",
+    "            \"ref_column\" : \"key_dim_fecha\"\n",
     "        },\n",
-    "        \"id_fecha_cerrado\": {\n",
-    "            \"column\": \"fecha_cerrado\",\n",
-    "            \"ref_table\": \"dim_fecha\",\n",
-    "            \"ref_column\": \"key_dim_fecha\"\n",
+    "        \"key_fecha_cierre\" : {\n",
+    "            \"column\" : \"key_fecha_cierre\",\n",
+    "            \"ref_table\" : \"dim_fecha\",\n",
+    "            \"ref_column\" : \"key_dim_fecha\"\n",
     "        },\n",
-    "        \"id_hora_inicio\": {\n",
-    "            \"column\": \"hora_inicio\",\n",
-    "            \"ref_table\": \"dim_hora\",\n",
-    "            \"ref_column\": \"key_dim_hora\"\n",
+    "        \"key_hora_inicio\" : {\n",
+    "            \"column\" : \"key_hora_inicio\",\n",
+    "            \"ref_table\" : \"dim_hora\",\n",
+    "            \"ref_column\" : \"key_dim_hora\"\n",
     "        },\n",
-    "        \"id_hora_asignado\": {\n",
-    "            \"column\": \"hora_asignado\",\n",
-    "            \"ref_table\": \"dim_hora\",\n",
-    "            \"ref_column\": \"key_dim_hora\"\n",
+    "        \"key_hora_asignacion\" : {\n",
+    "            \"column\" : \"key_hora_asignacion\",\n",
+    "            \"ref_table\" : \"dim_hora\",\n",
+    "            \"ref_column\" : \"key_dim_hora\"\n",
     "        },\n",
-    "        \"id_hora_recogido\": {\n",
-    "            \"column\": \"hora_recogido\",\n",
-    "            \"ref_table\": \"dim_hora\",\n",
-    "            \"ref_column\": \"key_dim_hora\"\n",
+    "        \"key_hora_recogida\" : {\n",
+    "            \"column\" : \"key_hora_recogida\",\n",
+    "            \"ref_table\" : \"dim_hora\",\n",
+    "            \"ref_column\" : \"key_dim_hora\"\n",
     "        },\n",
-    "        \"id_hora_entregado\": {\n",
-    "            \"column\": \"hora_entregado\",\n",
-    "            \"ref_table\": \"dim_hora\",\n",
-    "            \"ref_column\": \"key_dim_hora\"\n",
+    "        \"key_hora_entrega\" : {\n",
+    "            \"column\" : \"key_hora_entrega\",\n",
+    "            \"ref_table\" : \"dim_hora\",\n",
+    "            \"ref_column\" : \"key_dim_hora\"\n",
     "        },\n",
-    "        \"id_hora_cerrado\": {\n",
-    "            \"column\": \"hora_cerrado\",\n",
-    "            \"ref_table\": \"dim_hora\",\n",
-    "            \"ref_column\": \"key_dim_hora\"\n",
-    "        }\n",
-    "    }\n",
+    "        \"key_hora_cierre\" : {\n",
+    "            \"column\" : \"key_hora_cierre\",\n",
+    "            \"ref_table\" : \"dim_hora\",\n",
+    "            \"ref_column\" : \"key_dim_hora\"\n",
+    "        },\n",
+    "    },\n",
     "}"
    ]
   },
@@ -163,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -214,120 +204,72 @@
      "output_type": "stream",
      "text": [
       "Table dim_cliente already has a primary key. Skipping.\n",
-      "Table hecho_entrega_mensajeria_diario already has a primary key. Skipping.\n",
       "Table dim_fecha already has a primary key. Skipping.\n",
-      "Table hecho_entrega_mensajeria_hora already has a primary key. Skipping.\n",
+      "Table hecho_entrega_mensajeria_diario already has a primary key. Skipping.\n",
       "Table dim_hora already has a primary key. Skipping.\n",
-      "Table hecho_novedad already has a primary key. Skipping.\n",
+      "Column key_hecho_entrega_mensajeria_acumulada does not exist in table hecho_entrega_mensajeria_acumulada.\n",
       "Table dim_mensajero already has a primary key. Skipping.\n",
       "Table dim_sede already has a primary key. Skipping.\n",
+      "Table hecho_entrega_mensajeria_hora already has a primary key. Skipping.\n",
       "Table dim_tipo_novedad already has a primary key. Skipping.\n",
-      "Column key_hecho_entrega_mensajeria_acumulada does not exist in table hecho_entrega_mensajeria_acumulada.\n",
+      "Table hecho_novedad already has a primary key. Skipping.\n",
       "\n",
       "\n",
       "fact_table> hecho_novedad\n",
       ">\n",
-      "foreign_key> id_tipo_novedad\n",
-      "Foreign key already exists on hecho_entrega_mensajeria_acumulada for column key_tipo_novedad. Skipping.\n",
+      "foreign_key> key_tipo_novedad\n",
+      "Foreign key added on hecho_novedad for column key_tipo_novedad.\n",
       "=================\n",
       "fact_table> hecho_entrega_mensajeria_diario\n",
       ">\n",
-      "foreign_key> id_fecha\n",
+      "foreign_key> key_fecha\n",
       "Foreign key added on hecho_entrega_mensajeria_diario for column key_fecha.\n",
       ">\n",
-      "foreign_key> id_cliente\n",
+      "foreign_key> key_cliente\n",
       "Foreign key added on hecho_entrega_mensajeria_diario for column key_cliente.\n",
       ">\n",
-      "foreign_key> id_sede\n",
+      "foreign_key> key_sede\n",
       "Foreign key added on hecho_entrega_mensajeria_diario for column key_sede.\n",
-      ">\n",
-      "foreign_key> id_mensajero\n",
-      "Error adding foreign key on hecho_entrega_mensajeria_diario: (psycopg2.errors.UndefinedColumn) no existe la columna «key_mensajero» referida en la llave foránea\n",
-      "\n",
-      "[SQL: ALTER TABLE hecho_entrega_mensajeria_diario ADD FOREIGN KEY (key_mensajero) REFERENCES dim_mensajero(key_dim_mensajero)]\n",
-      "(Background on this error at: https://sqlalche.me/e/20/f405)\n",
       "=================\n",
       "fact_table> hecho_entrega_mensajeria_hora\n",
       ">\n",
-      "foreign_key> id_hora\n",
-      "Error adding foreign key on hecho_entrega_mensajeria_hora: (psycopg2.errors.InFailedSqlTransaction) transacción abortada, las órdenes serán ignoradas hasta el fin de bloque de transacción\n",
-      "\n",
-      "[SQL: ALTER TABLE hecho_entrega_mensajeria_hora ADD FOREIGN KEY (key_hora) REFERENCES dim_hora(key_dim_hora)]\n",
-      "(Background on this error at: https://sqlalche.me/e/20/2j85)\n",
+      "foreign_key> key_hora\n",
+      "Foreign key added on hecho_entrega_mensajeria_hora for column key_hora.\n",
       ">\n",
-      "foreign_key> id_cliente\n",
-      "Error adding foreign key on hecho_entrega_mensajeria_hora: (psycopg2.errors.InFailedSqlTransaction) transacción abortada, las órdenes serán ignoradas hasta el fin de bloque de transacción\n",
-      "\n",
-      "[SQL: ALTER TABLE hecho_entrega_mensajeria_hora ADD FOREIGN KEY (key_cliente) REFERENCES dim_cliente(key_dim_cliente)]\n",
-      "(Background on this error at: https://sqlalche.me/e/20/2j85)\n",
-      ">\n",
-      "foreign_key> id_mensajero\n",
-      "Error adding foreign key on hecho_entrega_mensajeria_hora: (psycopg2.errors.InFailedSqlTransaction) transacción abortada, las órdenes serán ignoradas hasta el fin de bloque de transacción\n",
-      "\n",
-      "[SQL: ALTER TABLE hecho_entrega_mensajeria_hora ADD FOREIGN KEY (key_mensajero) REFERENCES dim_mensajero(key_dim_mensajero)]\n",
-      "(Background on this error at: https://sqlalche.me/e/20/2j85)\n",
+      "foreign_key> key_mensajero\n",
+      "Foreign key added on hecho_entrega_mensajeria_hora for column key_mensajero.\n",
       "=================\n",
       "fact_table> hecho_entrega_mensajeria_acumulada\n",
       ">\n",
-      "foreign_key> id_fecha_inicio\n",
-      "Error adding foreign key on hecho_entrega_mensajeria_acumulada: (psycopg2.errors.InFailedSqlTransaction) transacción abortada, las órdenes serán ignoradas hasta el fin de bloque de transacción\n",
-      "\n",
-      "[SQL: ALTER TABLE hecho_entrega_mensajeria_acumulada ADD FOREIGN KEY (fecha_inicio) REFERENCES dim_fecha(key_dim_fecha)]\n",
-      "(Background on this error at: https://sqlalche.me/e/20/2j85)\n",
+      "foreign_key> key_fecha_inicio\n",
+      "Foreign key added on hecho_entrega_mensajeria_acumulada for column key_fecha_inicio.\n",
       ">\n",
-      "foreign_key> id_fecha_asignado\n",
-      "Error adding foreign key on hecho_entrega_mensajeria_acumulada: (psycopg2.errors.InFailedSqlTransaction) transacción abortada, las órdenes serán ignoradas hasta el fin de bloque de transacción\n",
-      "\n",
-      "[SQL: ALTER TABLE hecho_entrega_mensajeria_acumulada ADD FOREIGN KEY (fecha_asignado) REFERENCES dim_fecha(key_dim_fecha)]\n",
-      "(Background on this error at: https://sqlalche.me/e/20/2j85)\n",
+      "foreign_key> key_fecha_asignacion\n",
+      "Foreign key added on hecho_entrega_mensajeria_acumulada for column key_fecha_asignacion.\n",
       ">\n",
-      "foreign_key> id_fecha_recogido\n",
-      "Error adding foreign key on hecho_entrega_mensajeria_acumulada: (psycopg2.errors.InFailedSqlTransaction) transacción abortada, las órdenes serán ignoradas hasta el fin de bloque de transacción\n",
-      "\n",
-      "[SQL: ALTER TABLE hecho_entrega_mensajeria_acumulada ADD FOREIGN KEY (fecha_recogido) REFERENCES dim_fecha(key_dim_fecha)]\n",
-      "(Background on this error at: https://sqlalche.me/e/20/2j85)\n",
+      "foreign_key> key_fecha_recogida\n",
+      "Foreign key added on hecho_entrega_mensajeria_acumulada for column key_fecha_recogida.\n",
       ">\n",
-      "foreign_key> id_fecha_entregado\n",
-      "Error adding foreign key on hecho_entrega_mensajeria_acumulada: (psycopg2.errors.InFailedSqlTransaction) transacción abortada, las órdenes serán ignoradas hasta el fin de bloque de transacción\n",
-      "\n",
-      "[SQL: ALTER TABLE hecho_entrega_mensajeria_acumulada ADD FOREIGN KEY (fecha_entregado) REFERENCES dim_fecha(key_dim_fecha)]\n",
-      "(Background on this error at: https://sqlalche.me/e/20/2j85)\n",
+      "foreign_key> key_fecha_entrega\n",
+      "Foreign key added on hecho_entrega_mensajeria_acumulada for column key_fecha_entrega.\n",
       ">\n",
-      "foreign_key> id_fecha_cerrado\n",
-      "Error adding foreign key on hecho_entrega_mensajeria_acumulada: (psycopg2.errors.InFailedSqlTransaction) transacción abortada, las órdenes serán ignoradas hasta el fin de bloque de transacción\n",
-      "\n",
-      "[SQL: ALTER TABLE hecho_entrega_mensajeria_acumulada ADD FOREIGN KEY (fecha_cerrado) REFERENCES dim_fecha(key_dim_fecha)]\n",
-      "(Background on this error at: https://sqlalche.me/e/20/2j85)\n",
+      "foreign_key> key_fecha_cierre\n",
+      "Foreign key added on hecho_entrega_mensajeria_acumulada for column key_fecha_cierre.\n",
       ">\n",
-      "foreign_key> id_hora_inicio\n",
-      "Error adding foreign key on hecho_entrega_mensajeria_acumulada: (psycopg2.errors.InFailedSqlTransaction) transacción abortada, las órdenes serán ignoradas hasta el fin de bloque de transacción\n",
-      "\n",
-      "[SQL: ALTER TABLE hecho_entrega_mensajeria_acumulada ADD FOREIGN KEY (hora_inicio) REFERENCES dim_hora(key_dim_hora)]\n",
-      "(Background on this error at: https://sqlalche.me/e/20/2j85)\n",
+      "foreign_key> key_hora_inicio\n",
+      "Foreign key added on hecho_entrega_mensajeria_acumulada for column key_hora_inicio.\n",
       ">\n",
-      "foreign_key> id_hora_asignado\n",
-      "Error adding foreign key on hecho_entrega_mensajeria_acumulada: (psycopg2.errors.InFailedSqlTransaction) transacción abortada, las órdenes serán ignoradas hasta el fin de bloque de transacción\n",
-      "\n",
-      "[SQL: ALTER TABLE hecho_entrega_mensajeria_acumulada ADD FOREIGN KEY (hora_asignado) REFERENCES dim_hora(key_dim_hora)]\n",
-      "(Background on this error at: https://sqlalche.me/e/20/2j85)\n",
+      "foreign_key> key_hora_asignacion\n",
+      "Foreign key added on hecho_entrega_mensajeria_acumulada for column key_hora_asignacion.\n",
       ">\n",
-      "foreign_key> id_hora_recogido\n",
-      "Error adding foreign key on hecho_entrega_mensajeria_acumulada: (psycopg2.errors.InFailedSqlTransaction) transacción abortada, las órdenes serán ignoradas hasta el fin de bloque de transacción\n",
-      "\n",
-      "[SQL: ALTER TABLE hecho_entrega_mensajeria_acumulada ADD FOREIGN KEY (hora_recogido) REFERENCES dim_hora(key_dim_hora)]\n",
-      "(Background on this error at: https://sqlalche.me/e/20/2j85)\n",
+      "foreign_key> key_hora_recogida\n",
+      "Foreign key added on hecho_entrega_mensajeria_acumulada for column key_hora_recogida.\n",
       ">\n",
-      "foreign_key> id_hora_entregado\n",
-      "Error adding foreign key on hecho_entrega_mensajeria_acumulada: (psycopg2.errors.InFailedSqlTransaction) transacción abortada, las órdenes serán ignoradas hasta el fin de bloque de transacción\n",
-      "\n",
-      "[SQL: ALTER TABLE hecho_entrega_mensajeria_acumulada ADD FOREIGN KEY (hora_entregado) REFERENCES dim_hora(key_dim_hora)]\n",
-      "(Background on this error at: https://sqlalche.me/e/20/2j85)\n",
+      "foreign_key> key_hora_entrega\n",
+      "Foreign key added on hecho_entrega_mensajeria_acumulada for column key_hora_entrega.\n",
       ">\n",
-      "foreign_key> id_hora_cerrado\n",
-      "Error adding foreign key on hecho_entrega_mensajeria_acumulada: (psycopg2.errors.InFailedSqlTransaction) transacción abortada, las órdenes serán ignoradas hasta el fin de bloque de transacción\n",
-      "\n",
-      "[SQL: ALTER TABLE hecho_entrega_mensajeria_acumulada ADD FOREIGN KEY (hora_cerrado) REFERENCES dim_hora(key_dim_hora)]\n",
-      "(Background on this error at: https://sqlalche.me/e/20/2j85)\n",
+      "foreign_key> key_hora_cierre\n",
+      "Foreign key added on hecho_entrega_mensajeria_acumulada for column key_hora_cierre.\n",
       "=================\n"
      ]
     }
@@ -399,7 +341,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
