--- a/notebook/dim_hora.ipynb
+++ b/notebook/dim_hora.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,14 +43,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jpant\\AppData\\Local\\Temp\\ipykernel_8592\\1387622990.py:1: FutureWarning: 'T' is deprecated and will be removed in a future version, please use 'min' instead.\n",
+      "C:\\Users\\alejo\\AppData\\Local\\Temp\\ipykernel_18500\\1387622990.py:1: FutureWarning: 'T' is deprecated and will be removed in a future version, please use 'min' instead.\n",
       "  hora = pd.DataFrame({'hora': pd.date_range('2024-01-01', '2024-01-01 23:59', freq=\"T\")})\n"
      ]
     },
@@ -181,7 +181,7 @@
        "[1440 rows x 4 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -207,13 +207,13 @@
        "440"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hora.to_sql('dim_hora', etl, index_label='key_dim_hora', index=False,  if_exists='replace')"
+    "hora.to_sql('dim_hora', etl, index=False,  if_exists='replace')"
    ]
   }
  ],
@@ -233,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
