--- a/notebook/hecho_novedad.ipynb
+++ b/notebook/hecho_novedad.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -67,10 +67,10 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>key_service</th>\n",
-       "      <th>key_type_novelty</th>\n",
-       "      <th>total_novelty</th>\n",
+       "      <th>key_servicio</th>\n",
+       "      <th>key_tipo_novedad</th>\n",
        "      <th>key_hecho_novedad</th>\n",
+       "      <th>total_novedad</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -85,29 +85,29 @@
        "      <th>1</th>\n",
        "      <td>29</td>\n",
        "      <td>2</td>\n",
-       "      <td>1</td>\n",
        "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>51</td>\n",
        "      <td>1</td>\n",
-       "      <td>5</td>\n",
        "      <td>3</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>51</td>\n",
        "      <td>2</td>\n",
-       "      <td>3</td>\n",
        "      <td>4</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>57</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
        "      <td>5</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -120,36 +120,36 @@
        "      <th>3557</th>\n",
        "      <td>28455</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>3558</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3558</th>\n",
        "      <td>28461</td>\n",
        "      <td>2</td>\n",
-       "      <td>1</td>\n",
        "      <td>3559</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3559</th>\n",
        "      <td>28464</td>\n",
        "      <td>2</td>\n",
-       "      <td>1</td>\n",
        "      <td>3560</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3560</th>\n",
        "      <td>28466</td>\n",
        "      <td>2</td>\n",
-       "      <td>1</td>\n",
        "      <td>3561</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3561</th>\n",
        "      <td>28467</td>\n",
        "      <td>2</td>\n",
-       "      <td>2</td>\n",
        "      <td>3562</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -157,23 +157,23 @@
        "</div>"
       ],
       "text/plain": [
-       "      key_service  key_type_novelty  total_novelty  key_hecho_novedad\n",
-       "0              29                 1              1                  1\n",
-       "1              29                 2              1                  2\n",
-       "2              51                 1              5                  3\n",
-       "3              51                 2              3                  4\n",
-       "4              57                 1              2                  5\n",
-       "...           ...               ...            ...                ...\n",
-       "3557        28455                 1              1               3558\n",
-       "3558        28461                 2              1               3559\n",
-       "3559        28464                 2              1               3560\n",
-       "3560        28466                 2              1               3561\n",
-       "3561        28467                 2              2               3562\n",
+       "      key_servicio  key_tipo_novedad  key_hecho_novedad  total_novedad\n",
+       "0               29                 1                  1              1\n",
+       "1               29                 2                  2              1\n",
+       "2               51                 1                  3              5\n",
+       "3               51                 2                  4              3\n",
+       "4               57                 1                  5              2\n",
+       "...            ...               ...                ...            ...\n",
+       "3557         28455                 1               3558              1\n",
+       "3558         28461                 2               3559              1\n",
+       "3559         28464                 2               3560              1\n",
+       "3560         28466                 2               3561              1\n",
+       "3561         28467                 2               3562              2\n",
        "\n",
        "[3562 rows x 4 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
        "562"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +238,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
